--- a/src/App.css
+++ b/src/App.css
@@ -45,16 +45,18 @@
   }
 }
 
+
 .spinner-container {
   position: fixed;
-  width: 100%;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
   top: 0;
   z-index: 1;
+  overflow: hidden;
+  left: 0;
 }
-
 .spinner{
   margin: 0 10px;
   width: 50px;
